--- a/src/UtilityTools.Application/UtilityTools.Application.csproj
+++ b/src/UtilityTools.Application/UtilityTools.Application.csproj
@@ -9,8 +9,8 @@
     <PackageReference Include="AutoMapper" Version="16.0.0" />
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.1" />
     <PackageReference Include="BCrypt.Net-Next" Version="0.1.0" />
-    <PackageReference Include="EPPlus" Version="8.3.1" />
     <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="NPOI" Version="2.7.5" />
     <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
     <PackageReference Include="Hangfire.Core" Version="1.8.17" />
     <PackageReference Include="MediatR" Version="14.0.0" />
