--- a/src/UtilityTools.Api/appsettings.json
+++ b/src/UtilityTools.Api/appsettings.json
@@ -68,20 +68,7 @@
     "RefreshTokenExpirationDays": 7
   },
   "FileStorage": {
-    "Type": "Local",
-    "LocalPath": "./storage",
-    "S3BucketName": "",
-    "S3Region": "",
-    "S3AccessKey": "",
-    "S3SecretKey": "",
-    "S3Endpoint": ""
-  },
-  "MinIO": {
-    "Endpoint": "http://localhost:9000",
-    "AccessKey": "minioadmin",
-    "SecretKey": "minioadmin123",
-    "UseSSL": false,
-    "BucketName": "utilitytools"
+    "LocalPath": "./storage"
   },
   "Cache": {
     "DefaultExpirationMinutes": 30,
@@ -117,7 +104,6 @@
     "MaxVideoSize": 524288000
   },
   "Features": {
-    "VideoCompressionEnabled": true,
     "DocToPdfEnabled": true,
     "BackgroundRemovalEnabled": true
   },
